--- a/builds/msvc/vs2008/libzmq/libzmq.vcproj
+++ b/builds/msvc/vs2008/libzmq/libzmq.vcproj
@@ -160,6 +160,7 @@
       <File RelativePath="..\..\..\..\src\tcp_connecter.cpp" />
       <File RelativePath="..\..\..\..\src\tcp_listener.cpp" />
       <File RelativePath="..\..\..\..\src\thread.cpp" />
+      <File RelativePath="..\..\..\..\src\timers.cpp" />
       <File RelativePath="..\..\..\..\src\trie.cpp" />
       <File RelativePath="..\..\..\..\src\v1_decoder.cpp" />
       <File RelativePath="..\..\..\..\src\v1_encoder.cpp" />
@@ -243,6 +244,7 @@
       <File RelativePath="..\..\..\..\src\tcp_connecter.hpp" />
       <File RelativePath="..\..\..\..\src\tcp_listener.hpp" />
       <File RelativePath="..\..\..\..\src\thread.hpp" />
+      <File RelativePath="..\..\..\..\src\timers.hpp" />
       <File RelativePath="..\..\..\..\src\trie.hpp" />
       <File RelativePath="..\..\..\..\src\v1_decoder.hpp" />
       <File RelativePath="..\..\..\..\src\v1_encoder.hpp" />
