Problem: On Windows CI, the included file Windows.hpp could not be found. Solution: Include the source directory
Problem: _sleep is a library function of Windows.
Solution: use sleep_

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -102,6 +102,7 @@ endif()
 
 foreach(test ${tests})
   add_executable(${test} ${test}.cpp)
+  target_include_directories(${test} PRIVATE "${CMAKE_SOURCE_DIR}/src")
   target_link_libraries(${test} libzmq)
 
   if(RT_LIBRARY)
