--- a/Makefile.am
+++ b/Makefile.am
@@ -709,6 +709,7 @@ EXTRA_DIST = \
 	MAINTAINERS	\
 	src/libzmq.pc.cmake.in \
 	src/libzmq.vers \
+	tweetnacl \
 	tools/curve_keygen.cpp
 
 MAINTAINERCLEANFILES = \
