--- a/builds/msvc/vs2015/libzmq/libzmq.vcxproj.filters
+++ b/builds/msvc/vs2015/libzmq/libzmq.vcxproj.filters
@@ -241,13 +241,19 @@
     <ClCompile Include="..\..\..\..\src\socket_poller.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\src\dish.cpp" />
-    <ClCompile Include="..\..\..\..\src\radio.cpp" />
-    <ClCompile Include="..\..\..\..\src\timers.cpp" />
     <ClCompile Include="..\..\..\..\src\udp_address.cpp">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\src\udp_engine.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\dish.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\radio.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\timers.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
@@ -531,13 +537,19 @@
     <ClInclude Include="..\..\..\..\src\decoder_allocators.hpp">
       <Filter>src\include</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\src\dish.hpp" />
-    <ClInclude Include="..\..\..\..\src\radio.hpp" />
-    <ClInclude Include="..\..\..\..\src\timers.hpp" />
     <ClInclude Include="..\..\..\..\src\udp_address.hpp">
       <Filter>src\include</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\udp_engine.hpp">
+      <Filter>src\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\dish.hpp">
+      <Filter>src\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\radio.hpp">
+      <Filter>src\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\timers.hpp">
       <Filter>src\include</Filter>
     </ClInclude>
   </ItemGroup>
