Problem: use of libsodium vs. tweetnacl is confused
It's unclear which we need and in the source code, conditional code
treats tweetnacl as a subclass of libsodium, which is inaccurate.

Solution: redesign the configure/cmake API for this:

* tweetnacl is present by default and cannot be enabled
* libsodium can be enabled using --with-libsodium, which replaces
  the built-in tweetnacl
* CURVE encryption can be disabled entirely using --enable-curve=no

The macros we define in platform.hpp are:

    ZMQ_HAVE_CURVE    1        //  When CURVE is enabled
    HAVE_LIBSODIUM    1        //  When we are using libsodium
    HAVE_TWEETNACL    1        //  When we're using tweetnacl (default)

As of this patch, the default build of libzmq always has CURVE
security, and always uses tweetnacl.

--- a/Makefile.am
+++ b/Makefile.am
@@ -269,11 +269,6 @@ src_libzmq_la_CPPFLAGS =
 src_libzmq_la_CXXFLAGS = @LIBZMQ_EXTRA_CXXFLAGS@
 src_libzmq_la_LIBADD =
 
-if HAVE_SODIUM
-src_libzmq_la_CPPFLAGS += ${sodium_CFLAGS}
-src_libzmq_la_LIBADD += ${sodium_LIBS}
-endif
-
 if USE_TWEETNACL
 src_libzmq_la_SOURCES += \
     tweetnacl/src/tweetnacl.c \
@@ -281,6 +276,11 @@ src_libzmq_la_SOURCES += \
 src_libzmq_la_CXXFLAGS += \
     -I$(top_builddir)/tweetnacl/contrib/randombytes \
     -I$(top_builddir)/tweetnacl/src
+endif
+
+if USE_LIBSODIUM
+src_libzmq_la_CPPFLAGS += ${sodium_CFLAGS}
+src_libzmq_la_LIBADD += ${sodium_LIBS}
 endif
 
 if HAVE_PGM
