--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,7 +176,7 @@ check_function_exists (gethrtime HAVE_GETHRTIME)
 set (CMAKE_REQUIRED_INCLUDES)
 
 add_definitions (-D_REENTRANT -D_THREAD_SAFE)
-add_definitions (-DZMQ_USING_CMAKE)
+add_definitions (-DZMQ_CUSTOM_PLATFORM_HPP)
 
 option (ENABLE_EVENTFD "Enable/disable eventfd" ZMQ_HAVE_EVENTFD)
 
