Problem: test_sockopt_hwm not renamed in gitignore
Solution: rename from test_socketopt_hwm to test_sockopt_hwm in
.gitignore too

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ autom4te.cache
 curve_keygen
 test_heartbeats
 test_msg_ffn
-test_socketopt_hwm
+test_sockopt_hwm
 test_resource
 test_ipc_wildcard
 test_stream_empty
