Deprecate zmq_utils.h
instead of removing it, which breaks downstream builds.

--- a/packaging/redhat/zeromq.spec.in
+++ b/packaging/redhat/zeromq.spec.in
@@ -120,6 +120,7 @@ This package contains ZeroMQ related development libraries and header files.
 %files devel
 %defattr(-,root,root,-)
 %{_includedir}/zmq.h
+%{_includedir}/zmq_utils.h
 
 %{_libdir}/libzmq.la
 %{_libdir}/libzmq.a
