--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -509,7 +509,8 @@ if (MINGW)
 endif ()
 
 include_directories (include ${CMAKE_CURRENT_BINARY_DIR})
-set (public_headers include/zmq.h)
+set (public_headers include/zmq.h
+                    include/zmq_utils.h)
 
 set (readme-docs AUTHORS
                 COPYING
