--- a/Makefile.am
+++ b/Makefile.am
@@ -16,7 +16,8 @@ AM_CPPFLAGS = \
 lib_LTLIBRARIES = src/libzmq.la
 
 include_HEADERS = \
-	include/zmq.h 
+	include/zmq.h \
+	include/zmq_utils.h
 
 src_libzmq_la_SOURCES = \
 	src/address.cpp \
