--- a/builds/msvc/Makefile.am
+++ b/builds/msvc/Makefile.am
@@ -3,7 +3,6 @@ LIBZMQ_DIST = vs2008/libzmq.sln \
               vs2010/libzmq.sln \
               vs2010/libzmq/libzmq.vcxproj \
               vs2010/libzmq/libzmq.vcxproj.filters \
-              vs2010/libzmq/libzmq.props \
               vs2010/libzmq/libzmq.xml \
               vs2010/libzmq.import.props \
               vs2010/libzmq.import.xml \
@@ -12,7 +11,6 @@ LIBZMQ_DIST = vs2008/libzmq.sln \
               vs2012/libzmq.sln \
               vs2012/libzmq/libzmq.vcxproj \
               vs2012/libzmq/libzmq.vcxproj.filters \
-              vs2012/libzmq/libzmq.props \
               vs2012/libzmq/libzmq.xml \
               vs2012/libzmq.import.props \
               vs2012/libzmq.import.xml \
@@ -21,7 +19,6 @@ LIBZMQ_DIST = vs2008/libzmq.sln \
               vs2013/libzmq.sln \
               vs2013/libzmq/libzmq.vcxproj \
               vs2013/libzmq/libzmq.vcxproj.filters \
-              vs2013/libzmq/libzmq.props \
               vs2013/libzmq/libzmq.xml \
               vs2013/libzmq.import.props \
               vs2013/libzmq.import.xml \
@@ -41,36 +38,36 @@ PERF_DIST = vs2008/local_lat/local_lat.vcproj \
             vs2010/remote_thr/remote_thr.vcxproj \
             vs2010/inproc_lat/inproc_lat.vcxproj \
             vs2010/inproc_thr/inproc_thr.vcxproj \
-            vs2010/local_lat/local_lat.props \
-            vs2010/local_thr/local_thr.props \
-            vs2010/remote_lat/remote_lat.props \
-            vs2010/remote_thr/remote_thr.props \
-            vs2010/inproc_lat/inproc_lat.props \
-            vs2010/inproc_thr/inproc_thr.props \
+            vs2010/local_lat/local_lat.vcxproj \
+            vs2010/local_thr/local_thr.vcxproj \
+            vs2010/remote_lat/remote_lat.vcxproj \
+            vs2010/remote_thr/remote_thr.vcxproj \
+            vs2010/inproc_lat/inproc_lat.vcxproj \
+            vs2010/inproc_thr/inproc_thr.vcxproj \
             vs2012/local_lat/local_lat.vcxproj \
             vs2012/local_thr/local_thr.vcxproj \
             vs2012/remote_lat/remote_lat.vcxproj \
             vs2012/remote_thr/remote_thr.vcxproj \
             vs2012/inproc_lat/inproc_lat.vcxproj \
             vs2012/inproc_thr/inproc_thr.vcxproj \
-            vs2012/local_lat/local_lat.props \
-            vs2012/local_thr/local_thr.props \
-            vs2012/remote_lat/remote_lat.props \
-            vs2012/remote_thr/remote_thr.props \
-            vs2012/inproc_lat/inproc_lat.props \
-            vs2012/inproc_thr/inproc_thr.props \
+            vs2012/local_lat/local_lat.vcxproj \
+            vs2012/local_thr/local_thr.vcxproj \
+            vs2012/remote_lat/remote_lat.vcxproj \
+            vs2012/remote_thr/remote_thr.vcxproj \
+            vs2012/inproc_lat/inproc_lat.vcxproj \
+            vs2012/inproc_thr/inproc_thr.vcxproj \
             vs2013/local_lat/local_lat.vcxproj \
             vs2013/local_thr/local_thr.vcxproj \
             vs2013/remote_lat/remote_lat.vcxproj \
             vs2013/remote_thr/remote_thr.vcxproj \
             vs2013/inproc_lat/inproc_lat.vcxproj \
             vs2013/inproc_thr/inproc_thr.vcxproj \
-            vs2013/local_lat/local_lat.props \
-            vs2013/local_thr/local_thr.props \
-            vs2013/remote_lat/remote_lat.props \
-            vs2013/remote_thr/remote_thr.props \
-            vs2013/inproc_lat/inproc_lat.props \
-            vs2013/inproc_thr/inproc_thr.props
+            vs2013/local_lat/local_lat.vcxproj \
+            vs2013/local_thr/local_thr.vcxproj \
+            vs2013/remote_lat/remote_lat.vcxproj \
+            vs2013/remote_thr/remote_thr.vcxproj \
+            vs2013/inproc_lat/inproc_lat.vcxproj \
+            vs2013/inproc_thr/inproc_thr.vcxproj
 
 PROPERTIES_DIST = properties/Common.props \
 		  properties/DebugDEXE.props \
